[gd_scene load_steps=12 format=3 uid="uid://pic747etnf3q"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_j3w5a"]
[ext_resource type="AudioStream" uid="uid://cixnlf40w3kyf" path="res://assets/retro-explosion.wav" id="2_nbapd"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fm0j0"]
resource_name = "Base"
cull_mode = 2
albedo_color = Color(0.906332, 0.228634, 0.26327, 1)
roughness = 0.4
emission_enabled = true
emission = Color(1, 0.170209, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vaae8"]
resource_name = "Wing"
cull_mode = 2
albedo_color = Color(0.865116, 0.73038, 0.906332, 1)
roughness = 0.5
emission_enabled = true
emission = Color(0.693672, 0.506017, 0.881327, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ejhm6"]
resource_name = "Material"
cull_mode = 2
albedo_color = Color(0.906332, 0.849879, 0.352818, 1)
roughness = 0.5
emission_enabled = true
emission = Color(1, 1, 0.715658, 1)

[sub_resource type="ArrayMesh" id="ArrayMesh_cjr37"]
_surfaces = [{
"aabb": AABB(-1.41421, -21.618, -2.00265, 2.82844, 43.236, 3.38948),
"format": 34896613377,
"index_count": 84,
"index_data": PackedByteArray(3, 0, 5, 0, 0, 0, 3, 0, 0, 0, 4, 0, 5, 0, 8, 0, 0, 0, 5, 0, 6, 0, 8, 0, 0, 0, 7, 0, 4, 0, 0, 0, 8, 0, 7, 0, 3, 0, 2, 0, 5, 0, 3, 0, 4, 0, 2, 0, 5, 0, 1, 0, 6, 0, 5, 0, 2, 0, 1, 0, 2, 0, 7, 0, 1, 0, 2, 0, 4, 0, 7, 0, 6, 0, 16, 0, 8, 0, 6, 0, 15, 0, 16, 0, 7, 0, 14, 0, 1, 0, 7, 0, 13, 0, 14, 0, 1, 0, 15, 0, 6, 0, 1, 0, 14, 0, 15, 0, 8, 0, 13, 0, 7, 0, 8, 0, 16, 0, 13, 0, 10, 0, 13, 0, 9, 0, 10, 0, 14, 0, 13, 0, 11, 0, 14, 0, 10, 0, 11, 0, 15, 0, 14, 0, 9, 0, 16, 0, 12, 0, 9, 0, 13, 0, 16, 0, 12, 0, 15, 0, 11, 0, 12, 0, 16, 0, 15, 0),
"name": "Base",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 17,
"vertex_data": PackedByteArray(254, 255, 255, 127, 13, 151, 0, 0, 68, 59, 255, 127, 255, 255, 0, 0, 0, 0, 255, 127, 13, 151, 0, 0, 255, 127, 255, 127, 0, 0, 0, 0, 255, 127, 255, 255, 13, 151, 0, 0, 255, 127, 0, 0, 13, 151, 0, 0, 255, 127, 68, 59, 255, 255, 0, 0, 255, 127, 186, 196, 255, 255, 0, 0, 186, 196, 255, 127, 255, 255, 0, 0, 255, 127, 100, 176, 124, 236, 0, 0, 154, 79, 255, 127, 124, 236, 0, 0, 255, 127, 154, 79, 124, 236, 0, 0, 100, 176, 255, 127, 124, 236, 0, 0, 255, 127, 186, 196, 124, 236, 0, 0, 68, 59, 255, 127, 124, 236, 0, 0, 255, 127, 68, 59, 124, 236, 0, 0, 186, 196, 255, 127, 124, 236, 0, 0)
}, {
"aabb": AABB(-2.06025, -13.2781, -0.333284, 4.12051, 27.0395, 1.16193),
"format": 34896613377,
"index_count": 72,
"index_data": PackedByteArray(0, 0, 14, 0, 12, 0, 0, 0, 13, 0, 14, 0, 13, 0, 15, 0, 14, 0, 13, 0, 3, 0, 15, 0, 3, 0, 2, 0, 15, 0, 3, 0, 1, 0, 2, 0, 1, 0, 12, 0, 2, 0, 1, 0, 0, 0, 12, 0, 13, 0, 1, 0, 3, 0, 13, 0, 0, 0, 1, 0, 15, 0, 12, 0, 14, 0, 15, 0, 2, 0, 12, 0, 4, 0, 10, 0, 9, 0, 4, 0, 5, 0, 10, 0, 9, 0, 11, 0, 8, 0, 9, 0, 10, 0, 11, 0, 8, 0, 7, 0, 6, 0, 8, 0, 11, 0, 7, 0, 6, 0, 5, 0, 4, 0, 6, 0, 7, 0, 5, 0, 9, 0, 6, 0, 4, 0, 9, 0, 8, 0, 6, 0, 11, 0, 5, 0, 7, 0, 11, 0, 10, 0, 5, 0),
"name": "Wing",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 16,
"vertex_data": PackedByteArray(110, 255, 121, 64, 144, 102, 0, 0, 5, 132, 0, 0, 195, 231, 0, 0, 71, 133, 211, 9, 255, 255, 0, 0, 162, 132, 43, 246, 0, 0, 0, 0, 144, 0, 121, 64, 144, 102, 0, 0, 47, 0, 115, 67, 231, 109, 0, 0, 249, 123, 0, 0, 195, 231, 0, 0, 183, 122, 211, 9, 255, 255, 0, 0, 92, 123, 43, 246, 0, 0, 0, 0, 97, 0, 9, 139, 93, 32, 0, 0, 0, 0, 3, 142, 180, 39, 0, 0, 26, 122, 255, 255, 59, 24, 0, 0, 207, 255, 115, 67, 231, 109, 0, 0, 157, 255, 9, 139, 93, 32, 0, 0, 255, 255, 3, 142, 180, 39, 0, 0, 228, 133, 255, 255, 59, 24, 0, 0)
}, {
"aabb": AABB(-0.534696, -8.17351, 1.1285, 1.06939, 16.347, 1.00136e-05),
"format": 34896613377,
"index_count": 6,
"index_data": PackedByteArray(1, 0, 3, 0, 2, 0, 1, 0, 0, 0, 3, 0),
"name": "Material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray(255, 127, 254, 255, 0, 0, 0, 0, 0, 0, 255, 127, 0, 0, 0, 0, 255, 127, 0, 0, 0, 0, 0, 0, 255, 255, 255, 127, 0, 0, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_4fyyn"]
resource_name = "enemy_Cube_002"
_surfaces = [{
"aabb": AABB(-1.41421, -21.618, -2.00265, 2.82844, 43.236, 3.38948),
"attribute_data": PackedByteArray(255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 127, 255, 31, 255, 127, 255, 95, 255, 127, 255, 159, 255, 127, 255, 159, 255, 63, 255, 159, 255, 63, 255, 159, 255, 63, 255, 159, 255, 63, 255, 31, 255, 63, 255, 31, 255, 63, 255, 31, 255, 63, 255, 31, 255, 63, 255, 95, 0, 0, 255, 31, 255, 63, 255, 31, 255, 63, 255, 95, 0, 0, 255, 159, 255, 63, 255, 159, 255, 63, 255, 159, 255, 63, 255, 159, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 20, 141, 251, 63, 252, 96, 2, 63, 3, 96, 235, 18, 252, 96, 2, 63, 255, 159, 255, 63, 255, 159, 255, 63, 255, 159, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 0, 0, 255, 95, 0, 0, 255, 95, 0, 0, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63),
"format": 34896613399,
"index_count": 84,
"index_data": PackedByteArray(14, 0, 22, 0, 0, 0, 15, 0, 1, 0, 18, 0, 23, 0, 34, 0, 2, 0, 23, 0, 26, 0, 34, 0, 3, 0, 30, 0, 19, 0, 3, 0, 35, 0, 30, 0, 13, 0, 11, 0, 21, 0, 12, 0, 17, 0, 10, 0, 20, 0, 5, 0, 25, 0, 20, 0, 9, 0, 5, 0, 8, 0, 29, 0, 4, 0, 8, 0, 16, 0, 29, 0, 24, 0, 50, 0, 33, 0, 24, 0, 46, 0, 50, 0, 31, 0, 45, 0, 7, 0, 31, 0, 42, 0, 45, 0, 6, 0, 48, 0, 27, 0, 6, 0, 44, 0, 48, 0, 32, 0, 40, 0, 28, 0, 32, 0, 49, 0, 40, 0, 37, 0, 41, 0, 36, 0, 37, 0, 43, 0, 41, 0, 38, 0, 43, 0, 37, 0, 38, 0, 47, 0, 43, 0, 36, 0, 51, 0, 39, 0, 36, 0, 41, 0, 51, 0, 39, 0, 47, 0, 38, 0, 39, 0, 51, 0, 47, 0),
"material": SubResource("StandardMaterial3D_fm0j0"),
"name": "Base",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 52,
"vertex_data": PackedByteArray(254, 255, 255, 127, 13, 151, 22, 228, 254, 255, 255, 127, 13, 151, 235, 229, 254, 255, 255, 127, 13, 151, 13, 96, 254, 255, 255, 127, 13, 151, 13, 96, 68, 59, 255, 127, 255, 255, 13, 96, 68, 59, 255, 127, 255, 255, 13, 96, 68, 59, 255, 127, 255, 255, 255, 191, 68, 59, 255, 127, 255, 255, 255, 191, 0, 0, 255, 127, 13, 151, 13, 96, 0, 0, 255, 127, 13, 151, 13, 96, 0, 0, 255, 127, 13, 151, 232, 27, 0, 0, 255, 127, 13, 151, 19, 26, 255, 127, 255, 127, 0, 0, 232, 27, 255, 127, 255, 127, 0, 0, 19, 26, 255, 127, 255, 127, 0, 0, 22, 228, 255, 127, 255, 127, 0, 0, 235, 229, 255, 127, 255, 255, 13, 151, 13, 96, 255, 127, 255, 255, 13, 151, 232, 27, 255, 127, 255, 255, 13, 151, 235, 229, 255, 127, 255, 255, 13, 151, 13, 96, 255, 127, 0, 0, 13, 151, 13, 96, 255, 127, 0, 0, 13, 151, 19, 26, 255, 127, 0, 0, 13, 151, 22, 228, 255, 127, 0, 0, 13, 151, 13, 96, 255, 127, 68, 59, 255, 255, 255, 191, 255, 127, 68, 59, 255, 255, 13, 96, 255, 127, 68, 59, 255, 255, 13, 96, 255, 127, 68, 59, 255, 255, 255, 191, 255, 127, 186, 196, 255, 255, 255, 191, 255, 127, 186, 196, 255, 255, 13, 96, 255, 127, 186, 196, 255, 255, 13, 96, 255, 127, 186, 196, 255, 255, 255, 191, 186, 196, 255, 127, 255, 255, 255, 191, 186, 196, 255, 127, 255, 255, 255, 191, 186, 196, 255, 127, 255, 255, 13, 96, 186, 196, 255, 127, 255, 255, 13, 96, 255, 127, 100, 176, 124, 236, 99, 193, 154, 79, 255, 127, 124, 236, 238, 82, 255, 127, 154, 79, 124, 236, 89, 121, 100, 176, 255, 127, 124, 236, 129, 211, 255, 127, 186, 196, 124, 236, 255, 191, 255, 127, 186, 196, 124, 236, 155, 193, 255, 127, 186, 196, 124, 236, 255, 191, 68, 59, 255, 127, 124, 236, 8, 83, 68, 59, 255, 127, 124, 236, 255, 191, 68, 59, 255, 127, 124, 236, 255, 191, 255, 127, 68, 59, 124, 236, 255, 191, 255, 127, 68, 59, 124, 236, 117, 227, 255, 127, 68, 59, 124, 236, 255, 191, 186, 196, 255, 127, 124, 236, 255, 191, 186, 196, 255, 127, 124, 236, 255, 191, 186, 196, 255, 127, 124, 236, 152, 211, 127, 49, 216, 52, 35, 52, 214, 48, 29, 105, 225, 22, 225, 150, 225, 22, 225, 150, 29, 233, 29, 105, 29, 233, 22, 194, 23, 66, 232, 61, 23, 66, 225, 150, 29, 233, 29, 105, 29, 233, 127, 206, 39, 203, 219, 203, 40, 207, 127, 206, 39, 203, 219, 203, 40, 207, 127, 49, 216, 52, 35, 52, 214, 48, 225, 150, 29, 233, 127, 206, 39, 203, 35, 52, 214, 48, 225, 150, 225, 22, 29, 105, 29, 233, 219, 203, 40, 207, 127, 49, 216, 52, 29, 105, 225, 22, 22, 194, 231, 189, 29, 105, 29, 233, 29, 105, 225, 22, 22, 194, 23, 66, 232, 61, 231, 189, 225, 150, 29, 233, 225, 150, 225, 22, 232, 61, 23, 66, 232, 61, 231, 189, 22, 194, 231, 189, 29, 105, 225, 22, 225, 150, 225, 22, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 232, 61, 231, 189, 255, 255, 255, 255, 232, 61, 23, 66, 255, 255, 255, 255, 22, 194, 23, 66, 232, 61, 23, 66, 22, 194, 231, 189, 255, 255, 255, 255, 22, 194, 23, 66, 232, 61, 231, 189, 22, 194, 231, 189, 255, 255, 255, 255)
}, {
"aabb": AABB(-2.06025, -13.2781, -0.333284, 4.12051, 27.0395, 1.16193),
"attribute_data": PackedByteArray(255, 95, 255, 255, 255, 95, 0, 0, 255, 31, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 159, 255, 63, 255, 159, 255, 63, 255, 159, 255, 63, 255, 95, 255, 127, 255, 95, 255, 127, 255, 95, 255, 127, 255, 31, 255, 63, 255, 95, 0, 0, 255, 95, 255, 255, 255, 223, 255, 63, 255, 159, 0, 0, 255, 159, 255, 255, 255, 95, 255, 63, 255, 95, 255, 63, 255, 95, 255, 63, 255, 159, 255, 63, 255, 159, 255, 63, 255, 159, 255, 63, 255, 95, 255, 127, 255, 95, 255, 127, 255, 95, 255, 127, 255, 31, 255, 127, 255, 95, 255, 191, 255, 95, 255, 191, 255, 223, 255, 127, 255, 159, 255, 191, 255, 159, 255, 191, 255, 159, 255, 127, 255, 159, 255, 127, 255, 159, 255, 127, 255, 159, 255, 255, 255, 159, 0, 0, 255, 223, 255, 63, 255, 95, 255, 191, 255, 95, 255, 191, 255, 31, 255, 127, 255, 159, 255, 191, 255, 159, 255, 191, 255, 223, 255, 127, 255, 159, 255, 127, 255, 159, 255, 127, 255, 159, 255, 127),
"format": 34896613399,
"index_count": 72,
"index_data": PackedByteArray(0, 0, 42, 0, 36, 0, 0, 0, 39, 0, 42, 0, 40, 0, 45, 0, 43, 0, 40, 0, 9, 0, 45, 0, 11, 0, 8, 0, 47, 0, 11, 0, 5, 0, 8, 0, 3, 0, 37, 0, 6, 0, 3, 0, 1, 0, 37, 0, 41, 0, 4, 0, 10, 0, 41, 0, 2, 0, 4, 0, 46, 0, 38, 0, 44, 0, 46, 0, 7, 0, 38, 0, 14, 0, 32, 0, 29, 0, 14, 0, 17, 0, 32, 0, 28, 0, 35, 0, 26, 0, 28, 0, 31, 0, 35, 0, 24, 0, 21, 0, 18, 0, 24, 0, 33, 0, 21, 0, 20, 0, 16, 0, 13, 0, 20, 0, 23, 0, 16, 0, 27, 0, 19, 0, 12, 0, 27, 0, 25, 0, 19, 0, 34, 0, 15, 0, 22, 0, 34, 0, 30, 0, 15, 0),
"material": SubResource("StandardMaterial3D_vaae8"),
"name": "Wing",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 48,
"vertex_data": PackedByteArray(110, 255, 121, 64, 144, 102, 135, 207, 110, 255, 121, 64, 144, 102, 94, 235, 110, 255, 121, 64, 144, 102, 252, 203, 5, 132, 0, 0, 195, 231, 94, 235, 5, 132, 0, 0, 195, 231, 168, 249, 5, 132, 0, 0, 195, 231, 167, 218, 71, 133, 211, 9, 255, 255, 94, 235, 71, 133, 211, 9, 255, 255, 91, 252, 71, 133, 211, 9, 255, 255, 167, 218, 162, 132, 43, 246, 0, 0, 51, 193, 162, 132, 43, 246, 0, 0, 59, 199, 162, 132, 43, 246, 0, 0, 167, 218, 144, 0, 121, 64, 144, 102, 113, 75, 144, 0, 121, 64, 144, 102, 89, 14, 144, 0, 121, 64, 144, 102, 189, 42, 47, 0, 115, 67, 231, 109, 222, 7, 47, 0, 115, 67, 231, 109, 89, 14, 47, 0, 115, 67, 231, 109, 189, 42, 249, 123, 0, 0, 195, 231, 172, 41, 249, 123, 0, 0, 195, 231, 225, 118, 249, 123, 0, 0, 195, 231, 89, 14, 183, 122, 211, 9, 255, 255, 172, 41, 183, 122, 211, 9, 255, 255, 213, 7, 183, 122, 211, 9, 255, 255, 89, 14, 92, 123, 43, 246, 0, 0, 172, 41, 92, 123, 43, 246, 0, 0, 179, 70, 92, 123, 43, 246, 0, 0, 23, 59, 97, 0, 9, 139, 93, 32, 154, 71, 97, 0, 9, 139, 93, 32, 23, 59, 97, 0, 9, 139, 93, 32, 189, 42, 0, 0, 3, 142, 180, 39, 105, 5, 0, 0, 3, 142, 180, 39, 23, 59, 0, 0, 3, 142, 180, 39, 189, 42, 26, 122, 255, 255, 59, 24, 172, 41, 26, 122, 255, 255, 59, 24, 146, 8, 26, 122, 255, 255, 59, 24, 23, 59, 207, 255, 115, 67, 231, 109, 135, 207, 207, 255, 115, 67, 231, 109, 94, 235, 207, 255, 115, 67, 231, 109, 109, 252, 157, 255, 9, 139, 93, 32, 135, 207, 157, 255, 9, 139, 93, 32, 51, 193, 157, 255, 9, 139, 93, 32, 34, 200, 255, 255, 3, 142, 180, 39, 135, 207, 255, 255, 3, 142, 180, 39, 51, 193, 255, 255, 3, 142, 180, 39, 67, 249, 228, 133, 255, 255, 59, 24, 51, 193, 228, 133, 255, 255, 59, 24, 225, 254, 228, 133, 255, 255, 59, 24, 167, 218, 68, 212, 119, 216, 248, 198, 194, 199, 129, 138, 179, 123, 248, 198, 194, 199, 75, 137, 162, 129, 87, 41, 65, 46, 248, 198, 194, 199, 227, 205, 98, 186, 87, 41, 65, 46, 121, 228, 211, 236, 141, 9, 206, 6, 87, 41, 65, 46, 115, 122, 141, 141, 149, 53, 86, 54, 243, 37, 251, 41, 182, 72, 93, 51, 149, 53, 86, 54, 243, 37, 251, 41, 75, 208, 92, 213, 108, 138, 60, 187, 149, 53, 86, 54, 75, 208, 92, 213, 26, 72, 231, 51, 149, 53, 86, 54, 75, 208, 92, 213, 24, 248, 232, 244, 147, 18, 171, 26, 225, 247, 223, 244, 147, 18, 171, 26, 243, 37, 251, 41, 142, 183, 172, 62, 147, 18, 171, 26, 243, 37, 251, 41, 75, 208, 92, 213, 61, 95, 96, 31, 147, 18, 171, 26, 68, 212, 119, 216, 248, 198, 194, 199, 116, 206, 221, 185, 68, 212, 119, 216, 121, 228, 211, 236, 101, 9, 219, 6, 68, 212, 119, 216, 121, 228, 211, 236, 244, 61, 42, 184, 121, 228, 211, 236, 185, 226, 37, 167, 87, 41, 65, 46)
}, {
"aabb": AABB(-0.534696, -8.17351, 1.1285, 1.06939, 16.347, 1.00136e-05),
"attribute_data": PackedByteArray(20, 141, 251, 63, 252, 96, 2, 63, 3, 96, 235, 18, 252, 96, 2, 63),
"format": 34896613399,
"index_count": 6,
"index_data": PackedByteArray(1, 0, 3, 0, 2, 0, 1, 0, 0, 0, 3, 0),
"material": SubResource("StandardMaterial3D_ejhm6"),
"name": "Material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray(255, 127, 254, 255, 0, 0, 254, 127, 0, 0, 255, 127, 0, 0, 254, 127, 255, 127, 0, 0, 0, 0, 254, 127, 255, 255, 255, 127, 0, 0, 254, 127, 255, 255, 255, 255, 255, 255, 255, 255, 255, 127, 255, 255, 255, 255, 255, 255)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_cjr37")

[sub_resource type="BoxShape3D" id="BoxShape3D_egud4"]
size = Vector3(3.57625, 2.86771, 4.02306)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3o0me"]
emission_enabled = true
emission = Color(0.901961, 0.458824, 0, 1)
emission_energy_multiplier = 16.0

[sub_resource type="BoxMesh" id="BoxMesh_oxt7e"]
material = SubResource("StandardMaterial3D_3o0me")
size = Vector3(0.3, 0.3, 0.3)

[sub_resource type="Curve" id="Curve_k3is7"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.197802), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Enemy" type="CharacterBody3D" groups=["Enemies"]]
script = ExtResource("1_j3w5a")

[node name="EnemyMesh" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-1, 0, 0, 0, -0.0654184, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("ArrayMesh_4fyyn")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_egud4")

[node name="EnemyExplosion" type="CPUParticles3D" parent="."]
unique_name_in_owner = true
emitting = false
amount = 100
lifetime = 1.75
one_shot = true
explosiveness = 1.0
mesh = SubResource("BoxMesh_oxt7e")
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector3(1, 1, 1)
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 25.0
initial_velocity_max = 50.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_k3is7")

[node name="ExplosionSound" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_nbapd")
volume_db = 20.0
